# LinkALL

./: .gitignore  README.md  error.txt  readmeforai.md  setup.ps1
.github/workflows/: ci.yml  release.yml
admin/: README.md  api.md  index.html  package.json  svelte.config.js  tsconfig.json  vite.config.ts
admin/src/: App.svelte  app.css  main.ts
admin/src/lib/: Audit.svelte  CrashLogs.svelte  Dashboard.svelte  Devices.svelte  FcmTokens.svelte  Login.svelte  RateLimit.svelte  Sidebar.svelte  api.svelte.ts  format.ts  router.svelte.ts  router.ts
android/: README.md  api.md  build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/linkall/app/: LinkALLApp.kt
android/app/src/main/java/com/linkall/app/controller/: InputInjector.kt  VirtualInputOverlay.kt  WebRtcController.kt
android/app/src/main/java/com/linkall/app/data/api/: ApiService.kt  AuthInterceptor.kt
android/app/src/main/java/com/linkall/app/data/db/: AppDatabase.kt
android/app/src/main/java/com/linkall/app/di/: AppModule.kt
android/app/src/main/java/com/linkall/app/hosted/: BootReceiver.kt  HostedRtcSession.kt  HostedServiceController.kt  LinkALLAccessibilityService.kt  LinkALLIme.kt  ScreenCaptureService.kt  WebRtcHost.kt
android/app/src/main/java/com/linkall/app/push/: LinkALLMessagingService.kt
android/app/src/main/java/com/linkall/app/ui/: MainActivity.kt
android/app/src/main/java/com/linkall/app/util/: AppLog.kt  Crypto.kt  Prefs.kt  PrefsExt.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: colors.xml  en_strings_extra.xml  strings.xml  themes.xml  zh_strings_extra.xml
android/app/src/main/res/values-en/: strings.xml
android/app/src/main/res/values-zh/: strings.xml
android/app/src/main/res/xml/: accessibility_service_config.xml  file_paths.xml  method.xml
controlled-win/: README.md  api.md  index.html  package.json  tailwind.config.js  toolbar.html  tsconfig.json  vite.config.ts
controlled-win/scripts/: measure-size.bat  measure-size.sh
controlled-win/src/: App.svelte  Toolbar.svelte  app.css  main.ts  toolbar.ts
controlled-win/src-tauri/: Cargo.toml  tauri.conf.json
controlled-win/src-tauri/capabilities/: default.json
controlled-win/src-tauri/icons/: README.txt  icon.icns
controlled-win/src-tauri/src/: allocator.rs  audio.rs  autostart.rs  clipboard.rs  cmd.rs  config.rs  db.rs  h264.rs  hardware.rs  input.rs  lib.rs  logger.rs  main.rs  privacy.rs  recording.rs  screen.rs  secure_store.rs  server_api.rs  signaling.rs  state.rs  toolbar.rs  webrtc_host.rs
controlled-win/src/lib/: api.ts
server/: .env.example  README.md  api.md  go.mod  go.sum
server/cmd/server/: bridge.go  main.go
server/internal/api/: admin_handler.go  announce_handler.go  auth_handler.go  crash_handler.go  device_handler.go  json_helper.go  middleware.go  ota_handler.go  push_handler.go  router.go  util.go
server/internal/auth/: argon.go  invite.go  jwt.go  keys.go  lockout.go  user.go
server/internal/config/: config.go
server/internal/db/: db.go  tx.go
server/internal/models/: announcement.go  db.go  device.go  filetransfer.go  ota.go  session.go
server/internal/ota/: signer.go
server/internal/push/: push.go
server/internal/security/: audit.go  headers.go  limiter_global.go  origin.go  ratecfg.go  ratelimit.go
server/internal/signaling/: hub.go  protocol.go
web/: README.md  api.md  index.html  package.json  tailwind.config.js  vite.config.ts
web/public/: manifest.json  service-worker.js
web/src/: App.svelte  app.css
web/src/i18n/: en-US.json  index.ts  zh-CN.json
web/src/lib/: api.ts  auth.ts  router.ts  webrtc.ts
web/src/lib/components/: Alert.svelte  Modal.svelte  Select.svelte
web/src/routes/: Announcements.svelte  Connect.svelte  Control.svelte  Dashboard.svelte  Devices.svelte  Help.svelte  Login.svelte  Profile.svelte
web/src/routes/admin/: Announcements.svelte  Invites.svelte  OTA.svelte  Server.svelte  Users.svelte
(+12 files in other folders)
